--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,13 +61,14 @@ section {
     font-size: 1.7rem;
     color: var(--text-color);
     margin-left: 4rem;
-    transition: .3s;
+    transition: 0.5s;
 }
 
 .navbar a:hover,
 .navbar a.active {
     color: var(--main-color);
 }
+
 
 
 #icono {
@@ -84,6 +85,21 @@ section {
 
 .home-img img {
     width: 35vw;
+    animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-2.4rem);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .home-cont h3 {
@@ -393,17 +409,25 @@ span {
         padding: 10rem 3% 2rem;
     }
 
+    .servicios {
+        padding-bottom: 7rem;
+    }
+
+    .portafolio {
+        padding-bottom: 7rem;
+    }
+
     .footer {
         padding: 2rem 3%;
     }
 }
 
 @media (max-width: 768px) {
-    #menu-icon {
+    #icono {
         display: block;
     }
 
-    .navbar{
+    .navbar {
         position: absolute;
         top: 100%;
         left: 0;
@@ -412,11 +436,89 @@ span {
         background: var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, .2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        display: none;
     }
 
-    .navbar a{
+    .navbar.active {
+        display: block;
+    }
+
+    .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
+    }
+
+    .home {
+        flex-direction: column;
+    }
+
+    .home-cont h3 {
+        font-size: 2.6rem;
+    }
+
+    .home-cont h1 {
+        font-size: 5rem;
+    }
+
+    .home-img img {
+        width: 70vw;
+        margin-top: 4rem;
+    }
+
+    .about {
+        flex-direction: column-reverse;
+    }
+
+    .about img {
+        width: 70vw;
+        margin-top: 4rem;
+    }
+
+    .servicios h2 {
+        margin-bottom: 3rem;
+    }
+
+    .portafolio h2 {
+        margin-bottom: 3rem;
+    }
+
+    .port-cont {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 617px) {
+    .port-cont {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 450px) {
+    html {
+        font-size: 50%;
+    }
+
+    .contacto form .info-box input {
+        width: 100%;
+    }
+}
+
+@media (max-width: 365px) {
+    .home-img img {
+        width: 90wv;
+    }
+
+    .about-img img {
+        width: 90vw;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
     }
 }
